*Edge*

* Fixed HTML before tables causing the opening table tag to be emitted twice. #33

* Cleaned up unused code that was causing a warning. #28

* Workaround for Rails 2.1 bug that loads a previous version of RedCloth before loading the unpacked gem.  Has since been fixed in edge rails. #30

* Added a RedCloth::VERSION.to_s and .== methods so you can puts and compare RedCloth::VERSION just like in previous RedCloth releases. #26

* Fixed HTML block ending tags terminating blocks prematurely. #22


*4.0.1 (July 24, 2008)*

* Fixed lines starting with dashes being recognized as a definition list when there were no definitions.

* Created alias RedCloth.rb so Rails 2.1 gem dependency works on case-sensitive operating systems	.
* Fixed parsing sentences that had two em dashes surrounded by spaces from becoming del phrases. #19

* Fixed links including prior quoted phrases. #17


*4.0.0 (July 21, 2008)*

* New SuperRedCloth (RedCloth 4.0) is a total rewrite using Ragel for the parsing.

* Markdown support has been removed.

* Single newlines become <br> tags, just as in traditional RedCloth and other Textile parsers.

* HTML special characters are automatically escaped inside code signatures, like Textile 2.  This means you can simply write @<br />@ and the symbols are escaped whereas in RedCloth 3 you had to write @&lt;br /&gt;@ to make the code fragment readable.

* The restrictions parameter is observed just like previous versions (except :hard_breaks is now the default).

* Arguments to RedCloth#to_html are called so extensions made for prior versions can work.  Note: extensions need to be included rather than defined directly within the RedCloth class as was previously possible.

* Custom block tags can be implemented as in the previous version, though the means of implementing them differs.

* HTML embedded in the Textile input does not often need to be escaped from Textile parsing.

* The parser will not wrap lines that begin with a space in paragraph tags.
