@@ -293,3 +293,7 @@ html: |-
   		<td>f</td>
   	</tr>
   </table>
+---
+name: tilde in innerHTML is not altered
+in: '<a href="http://foo.com/bar?something=1~2~3">http://foo.com/bar?something=1~2~3</a>'
+html: '<p><a href="http://foo.com/bar?something=1~2~3">http://foo.com/bar?something=1~2~3</a></p>'
