@@ -1,5 +1,7 @@
 *Edge*
 
+* Limit overzealous superscript and subscript.  Sup/sub phrases must be surrounded by spaces or square brackets. #35
+
 * Fixed HTML before tables causing the opening table tag to be emitted twice. #33
 
 * Cleaned up unused code that was causing a warning. #28
